# supermassive-black-hole-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
shaders/: blit.frag  fullscreen.vert  kerr.frag
src/: main.cpp
tests/: validate_project.cmake
